# ROS2_WebRTC

./: Dockerfile  docker-compose.yaml  docker-compose.yml  signaling.py
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/audio_msgs/share/audio_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/audio_msgs/share/audio_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  audio_msgsConfig-version.cmake  audio_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/audio_msgs/share/audio_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/audio_msgs/share/audio_msgs/msg/: Audio.idl  Audio.msg
install/cpp_campub/lib/cpp_campub/: camera_publisher
install/cpp_campub/share/cpp_campub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh
install/cpp_campub/share/cpp_campub/cmake/: cpp_campubConfig-version.cmake  cpp_campubConfig.cmake
install/cpp_campub/share/cpp_campub/environment/: ament_prefix_path.dsv  path.dsv
install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cpp_pubsub/share/cpp_pubsub/cmake/: cpp_pubsubConfig-version.cmake  cpp_pubsubConfig.cmake
install/cpp_pubsub/share/cpp_pubsub/environment/: ament_prefix_path.dsv  path.dsv
install/gst_bridge/include/gst_bridge/: gst_bridge.h  rosaudiosrc.h  rosbasesink.h  rosbasesrc.h  rostextsink.h
install/gst_bridge/share/gst_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/gst_bridge/share/gst_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  gst_bridgeConfig-version.cmake  gst_bridgeConfig.cmake
install/gst_bridge/share/gst_bridge/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  register_plugin.dsv
install/gst_msgs/share/gst_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/gst_msgs/share/gst_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gst_msgs__rosidl_generator_pyExport.cmake  gst_msgsConfig-version.cmake  gst_msgsConfig.cmake  rosidl_cmake-extras.cmake  (+2 more)
install/gst_pipeline/include/gst_pipeline/: gst_pipeline.h
install/gst_pipeline/lib/gst_pipeline/: gst_pipeline_node
install/gst_pipeline/share/gst_pipeline/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.zsh
install/gst_pipeline_plugins/include/gst_pipeline_plugins/: buffer_observer.h  framegate.h  metadata_hook.h  multifilesink_observer.h  rtp_header_hook.h
install/gst_pipeline_plugins/share/gst_pipeline_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/gst_pipeline_plugins_webrtc/include/gst_pipeline_plugins_webrtc/: datachannel.h
install/gst_pipeline_plugins_webrtc/share/gst_pipeline_plugins_webrtc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.zsh
install/mobile_dd_robot/share/mobile_dd_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera/include/: align_depth_filter.h  dynamic_params.h  pointcloud_filter.h  profile_manager.h  ros_utils.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/webrtc_camera_node/lib/pkgconfig/: ixwebsocket.pc
install/webrtc_camera_node/lib/webrtc_camera_node/: camera_webrtc_node  receive_camera_node  send_camera_node
install/webrtc_camera_node/share/webrtc_camera_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh
log/: latest_build
ros2gstHumble_ws/install/: local_setup.sh  setup.sh
ros2gstHumble_ws/log/: latest_build
ros2gstHumble_ws/src/cpp_campub/: CMakeLists.txt
ros2gstHumble_ws/src/cpp_campub/src/: camera_publisher.cpp
ros2learn_ws/install/: local_setup.sh  setup.bash  setup.sh
ros2learn_ws/log/: latest_build
ros2learn_ws/src/cpp_pubsub/: package.xml
rosgsthumble_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosgsthumble_ws/install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_node_base.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
rosgsthumble_ws/log/: latest_build
rosgsthumble_ws/src/cpp_campub/: CMakeLists.txt
rosgsthumble_ws/src/cpp_campub/src/: camera_publisher.cpp
rosgsthumble_ws/src/install/: local_setup.sh  setup.sh
rosgsthumble_ws/src/log/: latest_build
rosgsthumble_ws/src/webrtc_camera_node/: CMakeLists.txt
rosgsthumble_ws/src/webrtc_camera_node/src/: camera_webrtc_node.cpp  receive_camera_node.cpp  send_camera_node.cpp
ws_ddmobile/install/: local_setup.sh  setup.sh
ws_ddmobile/log/: latest_build
ws_ddmobile/src/mobile_dd_robot/: CMakeLists.txt
(+2144 files in other folders)
